<resources>
    <string name="app_name">我不是播放器</string>
    <string name="player_name">我不是播放器(真的不是)</string>
    <string name="login_interface">login interface</string>
    <string name="no_local_video">没有发现视频…</string>
    <string name="default_video_icon">默认Vedio图标</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="net_resource">网络</string>
    <string name="battery">电池</string>
    <string name="no_net">没有网络…</string>
    <string name="play_icon">播放图标</string>
    <string name="video_image">视频image</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">释放刷新</string>
    <string name="header_hint_refresh_loading">正在刷新…</string>
    <string name="header_hint_refresh_time">刷新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放加载更多</string>
    <string name="title">标题</string>
    <string name="no_local_music">没有发现音乐…</string>
    <string name="share">分享</string>
    <string name="back">返回</string>
    <string name="current_playing_music">当前正在播放歌曲</string>
    <string name="play_list">播放列表</string>
    <string name="play">播放</string>
    <string name="music_info_image">歌曲信息图片</string>
    <string name="navigation">导航</string>
    <string name="blank" />
    <string name="search">搜索</string>
    <string name="music_album">歌曲专辑</string>
    <string name="next">下一首</string>
    <string name="pre">上一首</string>
    <string name="pause">暂停</string>
    <string name="user_name">一只成成成阿</string>
    <string name="theme">个性换肤</string>
    <string name="night_mode">夜间模式</string>
    <string name="exit_app">退出应用</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="search_hint">搜索本地音乐</string>
    <string name="add_widget">Add widget</string>
    <string name="not_found_music">未找到与“%1$s”相关的内容</string>
    <string name="dash">-</string>
</resources>
