<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/album_music"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/music" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="歌名" />

        <TextView
            android:id="@+id/song_singer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            tools:text="歌名" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|center_vertical">

            <ImageButton
                android:id="@+id/pre"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:contentDescription="@string/pre"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play_btn_prev" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:contentDescription="@string/play"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play_btn_pause" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:contentDescription="@string/next"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play_btn_next" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>