<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/music" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/music_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="歌曲名" />

        <TextView
            android:id="@+id/music_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            tools:text="歌手名" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/music_play"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:contentDescription="@string/play"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_btn_pause" />

        <ImageButton
            android:id="@+id/music_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/next"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_btn_next" />

    </LinearLayout>

</LinearLayout>