<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#206d95e5">

    <ImageView
        android:id="@+id/bar_music_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/music_info_image"
        android:src="@drawable/default_play_image" />

    <LinearLayout
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/bar_music_image"
        android:layout_toRightOf="@+id/bar_music_image"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/bar_music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:text="歌名" />

        <TextView
            android:id="@+id/bar_musician"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            tools:text="歌手" />

    </LinearLayout>

    <ImageView
        android:id="@+id/bar_play_or_pause_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/music_bar_menu"
        android:layout_toStartOf="@+id/music_bar_menu"
        android:contentDescription="@string/play"
        android:src="@drawable/music_bar_play_selector" />

    <ImageView
        android:id="@+id/music_bar_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/play_list"
        android:src="@drawable/music_bar_menu_selector" />

</RelativeLayout>