<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F9EA0"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/top_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/music_face_back_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back_white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/music_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:text="音乐名称" />

                <TextView
                    android:id="@+id/music_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    tools:text="歌手" />

            </LinearLayout>

            <ImageView
                android:id="@+id/music_share_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share_white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/music_volumn_cotroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone">

            <Button
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_volume_up_blue_grey_200_24dp" />

            <SeekBar
                android:id="@+id/seekbar_voice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:progressDrawable="@drawable/progress_horizontal" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/blank" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/music_info_and_lyric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_controller"
        android:layout_below="@+id/top_controller"
        android:layout_margin="6dp">

        <!--歌词-->
        <com.fairhand.mobileplayer.widget.CustomLyricView
            android:id="@+id/show_lyric"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <!--歌曲图片-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/show_music_image"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:src="@drawable/default_play_image"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="#ffffff"
                tools:text="当前播放时长" />

            <SeekBar
                android:id="@+id/seekbar_music"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:progressDrawable="@drawable/progress_horizontal" />

            <TextView
                android:id="@+id/music_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="#ffffff"
                tools:text="音乐总时长" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/music_play_mode"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/music_repeat_all_mode_selector" />

            <Button
                android:id="@+id/previous_music"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_toLeftOf="@id/pause_or_play_music"
                android:layout_toStartOf="@id/pause_or_play_music"
                android:background="@drawable/video_pre_selector" />

            <Button
                android:id="@+id/pause_or_play_music"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_centerInParent="true"
                android:background="@drawable/music_pause_selector" />

            <Button
                android:id="@+id/next_music"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/pause_or_play_music"
                android:layout_toRightOf="@id/pause_or_play_music"
                android:background="@drawable/video_next_selector" />

            <Button
                android:id="@+id/music_menu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/music_menu_selector" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
